# learn-rust

./: .gitignore  notes.md
chapter 2/: Cargo.toml
chapter 2/regression/: Cargo.toml
chapter 2/regression/src/: linear.rs
chapter 2/utils/: Cargo.toml
closures/: Cargo.toml
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
crates/: Cargo.toml
crates/src/: lib.rs
enums/: Cargo.toml
enums/src/: main.rs
exercises_collections/: Cargo.toml
exercises_collections/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
gui/: Cargo.toml
gui/src/: lib.rs
hello-wasm/: Cargo.toml
hello-wasm/site/: index.html  index.js  package-lock.json  package.json  webpack.config.js
hello-wasm/src/: lib.rs
leetcode/: Cargo.toml
leetcode/src/: 1170.rs  1184.rs  122.rs  1287.rs  1331.rs  167.rs  169_important.rs  217.rs  283_important.rs  448.rs  485.rs  566.rs  697.rs  888.rs  896.rs  _1342.rs  _1512.rs  _1528.rs  _1603.rs  _1614.rs  _1662.rs  _1672.rs  _1678.rs  _1684.rs  _1688.rs  lib.rs  main.rs
minigrep/: Cargo.toml  output.txt
minigrep/src/: lib.rs  main.rs
modules/: Cargo.toml
modules/restaurant/: Cargo.toml
neural/: Cargo.toml
neural/cnn/: Cargo.toml
neural/cnn/src/: main.rs
neural/data/: Cargo.toml
ownership/: Cargo.toml
patterns/: Cargo.toml
pointers/: Cargo.toml
refcell/: Cargo.toml
server/: 404.html  Cargo.toml  hello.html
server/src/: lib.rs
state-pattern/: Cargo.toml
structs/: Cargo.toml
tests/: Cargo.toml
varables/: Cargo.toml
(+19 files in other folders)
