[package]
name = "regression"
version = "0.1.0"
authors = ["SimonWang9610 <55259373+SimonWang9610@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine = "0.5.4"
serde = "1"
serde_derive = "1"
rand = "0.6.5"
csv = "1.1"
utils = {path = "../utils"}