[package]
name = "cnn"
version = "0.1.0"
authors = ["SimonWang9610 <55259373+SimonWang9610@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd = "1.0.2"
ndarray = "0.12.1"
rand= "0.7"
data = {path = "../data"}
